--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
-    color: white;
+    background-color: #A020F0;
+    color: Purple;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -24,12 +24,12 @@ body {
     font-size: 16px;
 }
 
-.escola-imagem{
+.produtos-imagem{
     width: 25%;
 }
 
-.escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+.produtos{
+    background-image: linear-gradient(#4B0082,#9400D3);
     color:white;
     display: flex;
     justify-content: center;
@@ -37,28 +37,28 @@ body {
     padding: 24px 0;
 }
 
-.escola-div-conteudo{
+.produtos-div-conteudo{
     width: 35%;
 }
 
 
-.escola-titulo{
+.pelucia-titulo{
     padding: 24px 0;
 }
 
-.estudante{
+.pelucia{
     padding: 24px 0;
 }
-.estudante-imagem{
+.pelucia-imagem{
     width: 120px;
 }
 
-.estudante-icone{
+.pelucia-icone{
     width: 24px;
     padding: 4px 8px;
 }
 
-.estudante-div{
+.pelucia-div{
     text-align: center;
     padding: 16px 0;
 }
