--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', Brush Script MT;
 }
 .cabecalho {
     background-color: #A020F0;
@@ -30,7 +30,7 @@ body {
 
 .produtos{
     background-image: linear-gradient(#4B0082,#9400D3);
-    color:white;
+    color:purple;
     display: flex;
     justify-content: center;
     align-items: center;
