--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 .cabecalho {
     background-color: #A020F0;
-    color: Purple;
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,7 +30,7 @@ body {
 
 .produtos{
     background-image: linear-gradient(#4B0082,#9400D3);
-    color:purple;
+    color:white;
     display: flex;
     justify-content: center;
     align-items: center;
